Use IndexTemplateRegistry